--- a/client/src/main/resources/main/systems/client/client-template.fxml
+++ b/client/src/main/resources/main/systems/client/client-template.fxml
@@ -5,7 +5,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.systems.client.controllers.ClientController">
    <top>
-      <Label fx:id="label" contentDisplay="CENTER" onMouseClicked="#handleMouseClicked" text="NetworkStorage" BorderPane.alignment="CENTER" />
+      <Label fx:id="clientLabel" contentDisplay="CENTER" onMouseClicked="#handleMouseClicked" text="NetworkStorage" BorderPane.alignment="CENTER" />
    </top>
    <bottom>
       <ProgressBar prefHeight="18.0" prefWidth="425.0" progress="0.0" BorderPane.alignment="CENTER" />
